# vifania_downloader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  Скачать документы.bat
infrastructure/: Dockerfile  docker-compose.yml
scripts/: Скачать документы.bat
src/: main.py
src/core/: config.py
src/repositories/: repository.py
src/services/: telegram.py
src/utils/: logger.py
