[tool.poetry]
name = "vifaniaparser"
version = "0.1.0"
description = ""
authors = ["Vladislav Bodrevskiy <anpathfinder@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.0"
pyrogram = "^2.0.106"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
